--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body{
   border-radius: 16px;
   background-color: #FCFCFC; opacity: 0.8;
   width: 80%;
-  height: 250px;
+  height: 400px;
   padding:30px;
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.4);
   margin-right:  auto;
@@ -85,7 +85,7 @@ body{
 
 .section2{
   margin-top: 60px;
-  height: 250px;
+  height: 400px;
   background-color: #FCFCFC; opacity: 0.8;
   width: 80%;
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.4);
@@ -93,6 +93,7 @@ body{
   margin-left: auto;
   border-radius: 16px;
   transition: 0.2s;
+  margin-bottom: 60px;
 }
 
 .section:hover{
